DH: fix style menu on iphone

--- a/wp-content/themes/denholm/scss/base/_helpers.scss
+++ b/wp-content/themes/denholm/scss/base/_helpers.scss
@@ -281,7 +281,10 @@
 
 .overflow-hidden {
   overflow: hidden;
-  position: relative;
-  height: 100%;
-  width: 100%;
+  
+  @include susy-media(mobileOnly) {
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
 }
